subido el jueves

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-<header>
-  pagina web de ejemplo
-</header>
+ <head>
+    <title>web de Luca</title>
+    <link href="css/estilos.css" rel="stylesheet">
+ </head>
 <body>
   <h>welcome</h>
   <p>Esto es el ejemplo basico
