--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <h>welcome</h>
   <p>Esto es el ejemplo basico
     de una pagina web</p>
+    <p>Este es el parrafo del examen</p>
 </body>
 </html>
