--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link href="css/estilos.css" rel="stylesheet">
  </head>
 <body>
-  <h>welcome</h>
-  <p>Esto es el ejemplo basico
-    de una pagina web</p>
-    <p>Este es el parrafo del examen</p>
+  <h1>AVATAR</h1>
+    
 </body>
+<p>AVATAR nos lleva a un mundo situado más allá de la imaginación, en donde un recién llegado de la Tierra se embarca en una aventura épica, llegando a luchar, al final, por salvar el extraño mundo al que ha aprendido a llamar su hogar.</p>
+<p>En “Avatar”, la tecnología se basó en el sistema FACS (sistema de codificación de acción facial) que combinó una plataforma de cabeza con una sola cámara de definición estándar para registrar las expresiones del actor cuyo rostro estaba salpicado de marcadores legibles por computadora.</p>
 </html>
