--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
     
 </body>
 <p>AVATAR nos lleva a un mundo situado más allá de la imaginación, en donde un recién llegado de la Tierra se embarca en una aventura épica, llegando a luchar, al final, por salvar el extraño mundo al que ha aprendido a llamar su hogar.</p>
+<H1>LA TECNOLOGÍA USADA </H1>
 <p>En “Avatar”, la tecnología se basó en el sistema FACS (sistema de codificación de acción facial) que combinó una plataforma de cabeza con una sola cámara de definición estándar para registrar las expresiones del actor cuyo rostro estaba salpicado de marcadores legibles por computadora.</p>
 </html>
+<h1>HISTORIA DE AVATAR</h1>
+<p>La serie se centra en el viaje de Aang, de 12 años, el Avatar actual y último superviviente de su nación, los Nómadas del Aire, junto con sus amigos Sokka, Katara y más tarde Toph, mientras se esfuerzan por poner fin a la guerra de la Nación del Fuego contra las otras naciones del mundo.</p>
+<H1>TIPOS DE AVATARES</H1>
+<p>Tipos de avatar
+
+  Avatares purusha.
+  Avatares guna.
+  Avatares manvantara.
+  Avatares shaktyavesa.</p>
+  <H1>FUÉ INSPIRADA EN...</H1>
+  <p>Zhangjiajie
+    En el mundo hay paisajes naturales que pueden servir de inspiración para grandes proyectos cinematográficos, en este caso, las montañas Zhangjiajie han sido la inspiración de algunos paisajes de Pandora, el mundo ficticio de la película Avatar.18 dic 2022</p>
+    <A href="dos.html">naturaleza de la pelicula avatar</A>
