--- a/dos.html
+++ b/dos.html
@@ -2,8 +2,14 @@
     <head>  
           <link href="css/estilos.css" rel="stylesheet">
     </head>
-    <body>contenido
+    <body><p>contenido</p>
          <a href="index.html"></a></p></body>
     </body>
 
 </html>
+<h1>SUS CREENCIAS</h1>
+<p>En la película, los Na´vi rinden culto a la naturaleza porque consideran que su dios reside en ella. El árbol de las almas que aparece constituye una especie de templo sagrado para ellos y simboliza al mismo tiempo la propia existencia.
+</p>
+<h1>¿COMO ES EL PLANETA?</h1>
+<p> La paradisiaca Pandora. Pandora, a pesar de ser casi tan grande como la Tierra, es solo una luna del gigante planeta gaseoso Polifemo, que tiene otras trece lunas.</p>
+<p>Este planeta tiene mucha variedad de naturaleza</p>
