--- a/dos.html
+++ b/dos.html
@@ -12,4 +12,14 @@
 </p>
 <h1>¿COMO ES EL PLANETA?</h1>
 <p> La paradisiaca Pandora. Pandora, a pesar de ser casi tan grande como la Tierra, es solo una luna del gigante planeta gaseoso Polifemo, que tiene otras trece lunas.</p>
-<p>Este planeta tiene mucha variedad de naturaleza</p>
+<p>Este planeta tiene mucha variedad de naturaleza...<p>
+<h1>Animales de Avatar</h1>
+
+<table style="border: 2px solid beige; 
+background-color: grey; 
+color: beige">
+<tr>
+<td>-Tulkun</td>
+<td> </td>
+</tr>
+<tr>
