--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
  <head>
+  <p><img src=s-l1600.jpg width="300"></p>
     <title>web de Luca</title>
     <link href="css/estilos.css" rel="stylesheet">
  </head>
